Template site completed. Excel to JSON parsing succeeded

--- a/views/orders/index.hbs
+++ b/views/orders/index.hbs
@@ -1,424 +1,3 @@
-<div id="form_container">
-
-  <h1><a>Activity Details</a></h1>
-  <form id="form_1018014" class="appnitro" method="post" action="/orders/page2">
-    <div class="form_description">
-      <h2>Activity Details</h2>
-      <p>Patient instructions: Please fill out as much of the first two pages as possible by ticking the appropriate boxes and providing any additional information in the adjoining shaded "comments" box. Please then fill out the VISA questionnaire(s) that
-        applies to you (pages 3-6).</p>
-    </div>
-    <ul>
-
-      <li id="li_1">
-        <label class="description" for="element_1">Occupation </label>
-        <div>
-          <input id="element_1" name="occupation" class="element text medium" type="text" maxlength="255" value="" required/>
-        </div>
-      </li>
-      <li id="li_4">
-        <label class="description" for="element_4">Occupational Activity Level </label>
-        <span>
-					<input id="element_4_1" name="element_4" class="element radio" type="radio" value="1" />
-					<label class="choice" for="element_4_1">Sedentary</label>
-					<input id="element_4_2" name="element_4" class="element radio" type="radio" value="2" />
-					<label class="choice" for="element_4_2">Low</label>
-					<input id="element_4_3" name="element_4" class="element radio" type="radio" value="3" />
-					<label class="choice" for="element_4_3">Moderate</label>
-					<input id="element_4_4" name="element_4" class="element radio" type="radio" value="4" />
-					<label class="choice" for="element_4_4">Vigorous</label>
-				</span>
-      </li>
-      <li id="li_5">
-        <p>What activities (e.g. football, walking,cycling etc.) do you do during the week and at what intensity (light=walking, moderate=can talk but not sing during activity, vigorous = only able to speak a few words during/immediately after activities)?</p>
-        <div id="activity_table">
-          <table>
-
-            <tr>
-              <th></th>
-              <th>Monday</th>
-              <th>Tuesday</th>
-              <th>Wednesday</th>
-              <th>Thursday</th>
-              <th>Friday</th>
-              <th>Saturday</th>
-              <th>Sunday</th>
-            </tr>
-            <tr>
-              <td>Activity 1</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Intensity</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Duration</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Activity 2</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Intensity</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Duration</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Activity 3</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Intensity</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-            <tr>
-              <td>Duration</td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-              <td>
-                <input type="text">
-              </td>
-            </tr>
-          </table>
-        </div>
-        <label class="description" for="element_5">Where is your tendon pain? </label>
-        <span>
-				<input id="element_5_1" name="element_5_1" class="element checkbox" type="checkbox" value="1" />
-				<label class="choice" for="element_5_1">Achilles</label>
-				<input id="element_5_2" name="element_5_2" class="element checkbox" type="checkbox" value="1" />
-				<label class="choice" for="element_5_2">Patellar</label>
-
-			</span>
-      </li>
-      <li id="li_6">
-        <label class="description" for="element_6">Where is your tendon pain? </label>
-        <span>
-			<input id="element_6_1" name="element_6_1" class="element checkbox" type="checkbox" value="1" />
-			<label class="choice" for="element_6_1">Left</label>
-			<input id="element_6_2" name="element_6_2" class="element checkbox" type="checkbox" value="1" />
-			<label class="choice" for="element_6_2">Right</label>
-
-		</span>
-      </li>
-      <li id="li_2">
-        <label class="description" for="element_2">How long have you suffered with the pain? </label>
-        <div>
-          <input id="element_2" name="element_2" class="element text medium" type="text" maxlength="255" value="" />
-        </div>
-      </li>
-      <li id="li_7">
-        <label class="description" for="element_7">When does the pain occur? </label>
-        <span>
-	<input id="element_7_1" name="element_7_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_1">Early Morning Stiffness</label>
-	<input id="element_7_2" name="element_7_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_2">Rest Periods</label>
-	<input id="element_7_3" name="element_7_3" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_3">Night time</label>
-	<input id="element_7_4" name="element_7_4" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_4">Vigorous activity</label>
-	<input id="element_7_5" name="element_7_5" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_5">Mild Activity</label>
-	<input id="element_7_6" name="element_7_6" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_6">Walking</label>
-	<input id="element_7_7" name="element_7_7" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_7">Running</label>
-	<input id="element_7_8" name="element_7_8" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_7_8">Other</label>
-
-</span>
-      </li>
-      <li id="li_8">
-        <label class="description" for="element_8">When is the pain worst? </label>
-        <span>
-	<input id="element_8_1" name="element_8_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_8_1">During Activities</label>
-	<input id="element_8_2" name="element_8_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_8_2">After Activities</label>
-	<input id="element_8_3" name="element_8_3" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_8_3">At/After rest</label>
-	<input id="element_8_4" name="element_8_4" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_8_4">Night time</label>
-
-</span>
-      </li>
-      <li id="li_9">
-        <label class="description" for="element_9">What alleviates your pain? </label>
-        <span>
-	<input id="element_9_1" name="element_9_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_1">Rest</label>
-	<input id="element_9_2" name="element_9_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_2">Ice</label>
-	<input id="element_9_3" name="element_9_3" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_3">Heat pad</label>
-	<input id="element_9_4" name="element_9_4" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_4">Strapping</label>
-	<input id="element_9_5" name="element_9_5" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_5">Slowing down</label>
-	<input id="element_9_6" name="element_9_6" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_6">Medication</label>
-	<input id="element_9_7" name="element_9_7" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_9_7">Other</label>
-
-</span>
-      </li>
-      <li id="li_10">
-        <label class="description" for="element_10">Do you get pins and needles in these areas? </label>
-        <span>
-	<input id="element_10_1" name="element_10" class="element radio" type="radio" value="1" />
-	<label class="choice" for="element_10_1">Yes</label>
-	<input id="element_10_2" name="element_10" class="element radio" type="radio" value="2" />
-	<label class="choice" for="element_10_2">No</label>
-
-</span>
-      </li>
-      <li id="li_11">
-        <label class="description" for="element_11">Which side? </label>
-        <span>
-	<input id="element_11_1" name="element_11_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_11_1">Left</label>
-	<input id="element_11_2" name="element_11_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_11_2">Right</label>
-
-</span>
-      </li>
-      <li id="li_12">
-        <label class="description" for="element_12">Do you get swelling in this/these areas? </label>
-        <span>
-	<input id="element_12_1" name="element_12" class="element radio" type="radio" value="1" />
-	<label class="choice" for="element_12_1">Yes</label>
-	<input id="element_12_2" name="element_12" class="element radio" type="radio" value="2" />
-	<label class="choice" for="element_12_2">No</label>
-
-</span>
-      </li>
-      <li id="li_13">
-        <label class="description" for="element_13">Which side? </label>
-        <span>
-	<input id="element_13_1" name="element_13_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_13_1">Left</label>
-	<input id="element_13_2" name="element_13_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_13_2">Right</label>
-
-</span>
-      </li>
-      <li id="li_14">
-        <label class="description" for="element_14">Do you get numbness in this/these areas? </label>
-        <span>
-	<input id="element_14_1" name="element_14" class="element radio" type="radio" value="1" />
-	<label class="choice" for="element_14_1">Yes</label>
-	<input id="element_14_2" name="element_14" class="element radio" type="radio" value="2" />
-	<label class="choice" for="element_14_2">No</label>
-
-</span>
-      </li>
-      <li id="li_15">
-        <label class="description" for="element_15">If so, which side? </label>
-        <span>
-	<input id="element_15_1" name="element_15_1" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_15_1">Left</label>
-	<input id="element_15_2" name="element_15_2" class="element checkbox" type="checkbox" value="1" />
-	<label class="choice" for="element_15_2">Right</label>
-
-</span>
-      </li>
-      <li id="li_3">
-        <label class="description" for="element_3">Have any of your symptoms changed in nature/severity since the start? </label>
-        <div>
-          <input id="element_3" name="element_3" class="element text medium" type="text" maxlength="255" value="" />
-        </div>
-        <p>
-          Please intersect this line to indicate how severe the pain can be, with least severe on the left and most severe on right right.
-          <input id="slider" type="range" name="points" id="points" value="50" min="0" max="100">
-          <div id="#sliderVal">Value</div>
-        </p>
-      </li>
-
-      <li class="buttons">
-        <input type="hidden" name="form_id" value="1018014" />
-
-        <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
-      </li>
-    </ul>
-  </form>
+<div class="textwidget margin-top-30">
+  
 </div>
