MongoDB data now being rendered to dashboard.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,7 +48,7 @@
     </header>
     {{#if firstName}}
     <div id="greeting" style="float:right">
-      <strong>Hi, {{firstName}}!</strong>
+      <strong>Hi, {{firstName}}! {{lastName}}, </strong>
       <a href="/users/logout">Log out</a>
     </div>
     {{/if}}
