--- a/views/orders/index.hbs
+++ b/views/orders/index.hbs
@@ -1,3 +1,7 @@
 <div class="textwidget margin-top-30">
+    
+    
+  <p>{{resultfind.Player_Display_Name}}</p>
+  <p>{{resultfind.Session_Date}}</p>
   
 </div>
