--- a/views/orders/index.hbs
+++ b/views/orders/index.hbs
@@ -1,7 +1,12 @@
-<div class="textwidget margin-top-30">
-    
-    
-  <p>{{resultfind.Player_Display_Name}}</p>
-  <p>{{resultfind.Session_Date}}</p>
-  
+<div ng-app="app">
+  <div ng-view></div>
 </div>
+
+<script src="/bower/angular/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="/bower/angular-route/angular-route.min.js"></script>
+<script src="/js/app/app.js"></script>
+<script src="/js/app/route-config.js"></script>
+<script src="/js/app/players/players.js"></script>
+<script src="/js/app/services/api-service.js"></script>
+<script src = "/bower/angular-resource.min.js"></script>
