--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width" />
   <title>GPS Data{{#if title}} - {{title}}{{/if}} | GPS Data</title>
   <meta name="description"/>
+  <script type='text/javascript' src='/js/jquery.js'></script>
   <link rel="stylesheet" href="/stylesheets/wp-backgrounds.css" type='text/css' media='all' />
   <link rel='stylesheet' href="/stylesheets/mjCont.css" type='text/css' media='all' />
   <link rel='stylesheet' href='/stylesheets/front.css' type='text/css' media='all' />
   <link rel='stylesheet' href='/stylesheets/style.css' type='text/css' media='all' />
   <link id="twentytwelve-fonts-css" media="all" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&subset=latin,latin-ext" rel="stylesheet">
-  <script type='text/javascript' src='/js/jquery.js'></script>
+  <script src="bower/highcharts.js"></script>
   <script type='text/javascript' src="/js/main.js"></script>
 </head>
 
