HML distance now being rendered to highcharts

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,9 +46,9 @@
         </div>
       </nav>
     </header>
-    {{#if resultfind.Player_Display_Name}}
+    {{#if input.Player_First_Name}}
     <div id="greeting" style="float:right">
-      <strong>Hi, {{resultfind.Player_Display_Name}}! </strong>
+      <strong>Hi, {{resultfind.Player_First_Name}}! </strong>
       <a href="/users/logout">Log out</a>
     </div>
     {{/if}}
