--- a/views/users/create.hbs
+++ b/views/users/create.hbs
@@ -14,6 +14,10 @@
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required value="{{input.email}}" />
     </div>
+     <div class="form-group">
+      <label for="email">Player Id</label>
+      <input type="text" id="Id" name="Id" required value="{{input.Id}}" />
+    </div>
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" id="password" name="password" autocomplete="off" required />
