Player names being rendered with ng-repeat.

--- a/views/orders/index.hbs
+++ b/views/orders/index.hbs
@@ -10,6 +10,7 @@
 <script src="/js/app/route-config.js"></script>
 <script src = "/bower/angular-resource.min.js"></script>
 <script src = "/bower/highcharts-ng/src/highcharts-ng.js"></script>
-
-
+<script src = "/bower/angular-bootstrap/ui-bootstrap.min.js"></script>
+<script src = "/js/app/services/measuresService.js"></script>
+<script src = "/js/app/playerscontroller.js"></script>
 
