--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,87 +1,41 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <title>GPS Data{{#if title}} - {{title}}{{/if}} | GPS Data</title>
-  <meta name="description"/>
+  <meta name="description" />
   <script type='text/javascript' src='/js/jquery.js'></script>
-  <link rel="stylesheet" href="/stylesheets/wp-backgrounds.css" type='text/css' media='all' />
-  <link rel='stylesheet' href="/stylesheets/mjCont.css" type='text/css' media='all' />
-  <link rel='stylesheet' href='/stylesheets/front.css' type='text/css' media='all' />
-  <link rel='stylesheet' href='/stylesheets/style.css' type='text/css' media='all' />
+  <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' type='text/css' media='all'>
+  <link rel='stylesheet' href='/stylesheets/style.css' type='text/css' media='all'/>
   <link id="twentytwelve-fonts-css" media="all" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700&subset=latin,latin-ext" rel="stylesheet">
   <script src="bower/highcharts.js"></script>
-  
-</head>
+  <style>
+   /* #whlBackground {
+      background: url("images/wallpaper.jpg");
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+    }*/
+    #measuresButtons{
+    text-align:center;
+}
 
-<body class="custom-font-enabled">
-  <div id="page" class="hfeed site">
+  </style>
+</head>
+<body>
+  <div id="whlBackground">
+
     <header id="masthead" class="site-header" role="banner">
-      <hgroup>
-        <h1 class="site-title"><a href="http://www.gpsdata.com/" title="GPS Data" rel="home">GPS Data</a></h1>
-        <h2 class="site-description">Sports Data Visualisation</h2>
-      </hgroup>
-      </a>
-      <nav id="site-navigation" class="main-navigation" role="navigation">
-        <h3 class="menu-toggle">Menu</h3>
-        <a class="assistive-text" href="#content" title="Skip to content">Skip to content</a>
-        <div class="menu-main-menu-container">
-          <ul id="menu-main-menu" class="nav-menu">
-            <li id="menu-item-21" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a href="https://gps-jacka92.c9.io/">Home</a>
-            </li>
-           
-            <li id="menu-item-53" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-53"><a href="http://www.landonhotel.com/news/">News</a>
-              <ul class="sub-menu">
-                <li id="menu-item-59" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-59"><a href="http://www.landonhotel.com/news/press-releases/">Press Releases</a>
-                </li>
-                <li id="menu-item-166" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-166"><a href="http://www.landonhotel.com/blog-2/">Blog</a>
-                </li>
-              </ul>
-            </li>
-            <li id="menu-item-152" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-152"><a href="http://www.landonhotel.com/contact/">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+
     </header>
-    {{#if input.Player_First_Name}}
-    <div id="greeting" style="float:right">
-      <strong>Hi, {{resultfind.Player_First_Name}}! </strong>
-      <a href="/users/logout">Log out</a>
-    </div>
-    {{/if}}
-    <a href="/users/logout">Log out</a>
+    
     <div id="main" class="wrapper">
-      <div id="primary" class="site-content">
-        <div id="content" role="main">
-          <div class="entry-content">
-            <div class="panel-grid" id="pg-218-0">
-              <div class="panel-grid-cell" id="pgc-218-0-0">
-                <div class="panel widget panel-first-child panel-last-child" id="panel-218-0-0-0">
-                  <div class="textwidget">
-                    <p><img class="size-full wp-image-223 alignleft" src="http://www.tothe92.co.uk/groundguide/images/pic/tottenham/logo.jpg" alt="restaurant to room_web" width="300" height="282" />
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="panel-grid-cell" id="pgc-218-0-1">
-                <div id="page-content" class="panel widget panel-first-child panel-last-child">
-                  <!-- BEGIN page-specific content -->
-                  {{{body}}}
-                  <!-- END page-specific content -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- BEGIN page-specific content -->
+      {{{body}}}
+      <!-- END page-specific content -->
     </div>
     <footer id="colophon" role="contentinfo">
-      <div class="site-info">
-        <a href="http://github.com/jacka92" title="Jack Armstrong">Created by Jack Armstrong</a>
-      </div>
+      <a href="http://github.com/jacka92" title="Jack Armstrong">Created by Jack Armstrong</a>
     </footer>
   </div>
 </body>
