--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -1,4 +1,16 @@
-
+<nav id="Nav" class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Proventor</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#/players">Home</a></li>
+        <li><a href="/users/logout">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div ng-app="app">
   <div ng-view></div>
 </div>
@@ -12,4 +24,7 @@
 <script src = "/bower/highcharts-ng/src/highcharts-ng.js"></script>
 <script src = "/bower/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src = "/js/app/playerscontroller.js"></script>
-
+<link rel='stylesheet' href='/stylesheets/style.css' type='text/css' media='all'/>
+<script src="/js/jquery.js"></script>
+<script src="/bower/nya-bootstrap-select/dist/js/nya-bs-select.min.js"></script>
+<link rel='stylesheet' href='/bower/nya-bootstrap-select/dist/css/nya-bs-select.css' type='text/css' media='all'>
