Refactored angular app: removed redundant code and re-configured routing.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,9 +21,9 @@
       {{#if error}}
       <div style="color:red;">{{error}}</div>
       {{/if}}
-      <div class="margin-top-30">
+   <!---   <div class="margin-top-30">
         or <a href="/users/create">Create an account</a>
-      </div>
+      </div>  -->
    
   </form>
 </div>
