Factory recipe added for stats. Controllers separated out.

--- a/views/players/index.hbs
+++ b/views/players/index.hbs
@@ -25,6 +25,9 @@
 <script src = "/bower/highcharts-ng/src/highcharts-ng.js"></script>
 <script src = "/bower/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src = "/js/app/playerscontroller.js"></script>
+<script src = "/js/app/MeasuresChartController.js"></script>
+<script src = "js/app/ChartController.js"></script>
+<script src = "js/app/services/stats-service.js"></script>
 <link rel='stylesheet' href='/stylesheets/style.css' type='text/css' media='all'/>
 <script src="/js/jquery.js"></script>
 <script src="/bower/nya-bootstrap-select/dist/js/nya-bs-select.min.js"></script>
