Highcharts res fixed by not displaying x-axis values. Injury off by default. Test files included.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
       {{/if}}
    <!---   <div class="margin-top-30">
         or <a href="/users/create">Create an account</a>
-      </div>  -->
+      </div>  --->
    
   </form>
 </div>
